--- a/23.md
+++ b/23.md
@@ -2,6 +2,7 @@
 
 ## Table of Contents <a id="1"/>
 
+- [Day-113](#13000) Parallelism
 - [Day-112](#12000) Theory vs. Reality
 - [Day-109](#10900) The Don't-Waste-App
 - [Day-108](#10800) Bausparen with Friends
@@ -63,10 +64,12 @@
 - [Day-4](#400) Big "Cleanup"
 - [Day-3](#300) A nasty Egg
 
-## Day-113: Parallism <a id="12000"/>
+## Day-113: Parallism <a id="13000"/>
 
-#### Blog-Chain-Time 2023.10.19-20:50 at the Piccolo <a id="12014"/>
-###### Topics: Music, Women, Reality
+#### Blog-Chain-Time 2023.10.20-14:30 at the Café-Bäcker-Mayer <a id="13001"/>
+###### Topics: Men, Computers, Psychology
+
+I meet [Roland](150000008.md) at the [Bäckerei-Mayer](2010034.md) and use the [Opportunity](60164.md) to drink a [Coffee](203000002.md).
 
 ## Day-112: Theory vs. Reality <a id="12000"/>
 
