--- a/20000022.md
+++ b/20000022.md
@@ -1,3 +1,3 @@
 # Beard-Trimmer
 
-A Beard-Trimmer is a [Device](20000000.md) for a [Beard](404.md).
+A Beard-Trimmer is a [Device](20000000.md) for a [Beard](40000041.md).
