--- a/23.md
+++ b/23.md
@@ -69,7 +69,7 @@
 #### Blog-Chain-Time 2023.10.20-14:30 at the Café-Bäcker-Mayer <a id="13001"/>
 ###### Topics: Men, Computers, Psychology
 
-I meet [Roland](150000008.md) at the [Bäckerei-Mayer](2010034.md) and use the [Opportunity](60164.md) to drink a [Coffee](203000002.md).
+I meet [Roland](150000008.md) at the [Bäckerei-Mayer](2010034.md) and use the [Opportunity](60164.md) to drink a [Coffee](203000002.md). My [Colleague](180000010.md) offers me 
 
 ## Day-112: Theory vs. Reality <a id="12000"/>
 
