--- a/10000103.md
+++ b/10000103.md
@@ -1,3 +1,3 @@
 # Parallelism
 
-Parallelism is [Use](404.md) of [Parallel-Interval-Pair](10000102.md).
+Parallelism is [Use](10000105.md) of [Parallel-Interval-Pair](10000102.md).
