--- a/21.md
+++ b/21.md
@@ -2,7 +2,7 @@
 
 ## Table of Contents  <a id="1"/>
 
- - [Day-113](#12300) Arrogance and Experts
+ - [Day-113](#12300) Good Men and Women
  - [Day-111](#12000) Dussel in Dusslingen
  - [Day-110](#11000) Good old Buddies
  - [Day-109](#10900) Helping Friend with Fun
