--- a/21.md
+++ b/21.md
@@ -84,11 +84,11 @@ Most of them are old [Friends](180000002.md) of mine, but also *really?* new One
 #### Blog-Chain-Time 2023.10.20-14:30 at the Café-Bäcker-Mayer <a id="12301"/>
 ###### Topics: Men, Technology
 
-I meet the old [Roland](150000008.md) at the [Bäckerei-Mayer](2010034.md) and use the [Opportunity](60164.md) to drink with him a [Coffee](203000002.md). My [Colleague](180000010.md) is an [Expert](12000000.md) for [Electronics](10400000.md), but also knows a lot about general [Computer-Science](9000000.md).
+I meet the old [Roland](150000008.md) at the [Bäckerei-Mayer](2010034.md) and use the [Opportunity](60164.md) to smoke a [Cigarillo](100100007.md) with him. My [Colleague](180000010.md) is an [Expert](12000000.md) for [Electronics](10400000.md), but also knows a lot about general [Computer-Science](9000000.md).
 
-In the Following we discuss many [Concepts](600011.md) of [Parallism](10000103.md) for [Computers](9000153.md) and because my [Friend](180000002.md) is experienced in [Hardware](9400000.md), he of course understands at least the Principles of Computer-Architectures, but he also seems to understand the basic [Concepts](600011.md) of [Operating-Systems](9100000.md).
+In the Following we discuss many [Concepts](600011.md) of [Parallism](10000103.md) for [Computers](9000153.md) and because my [Colleague](180000010.md) is experienced in [Hardware](9400000.md), he of course understands the Principles of Computer-Architectures, but he also seems to be familiar with the [Concepts](600011.md) of [Operating-Systems](9100000.md).
 
-After about 30 Minutes Talk, I am almost sure to the have found One of 10.000, who can claim to have "understood" at least Something of this crazy [Technology](60044.md) - Maybe still [Light-Years](10000106.md) away from my personal [Niveau](404.md), but still a *really* good [Man](40080022.md)!
+After about 30 Minutes Talk, I am almost sure to the have found One out of 10.000, who could claim to have "understood" most of this crazy [Technology](60044.md) - Maybe still [Light-Years](10000106.md) away from my [Niveau](404.md), but still a *really* good [Man](40080022.md)?
 
 ### Footnotes
 
