I am almost sure

--- a/21.md
+++ b/21.md
@@ -77,7 +77,7 @@ To be fair, I also occasionally use this [Concept](600011.md) as a [Tool](600043
 
 And appropos [The-Good](60120.md): Today I committed to my new [Secrets-Repository](300000032.md) two [Lists](60008.md) with [Names](60048.md) of 10 Good-[Men](40080022.md) and 10 Good-[Women](40000010.md).
 
-Most of them are old [Friends](180000002.md) of mine, but also *really?* new Ones made it into my personal Top-10. Hopefully the List will grow soon and if we use *real* [Parallelism](10000103.md), like I rehearsed it Today with [My-Next-Good-Man?](150000008.md), this can happen faster than expected:
+Most of them are old [Friends](180000002.md) of mine, but also *really?* new Ones made it into my personal Top-10. Hopefully the List will grow soon and if we use *real* [Parallelism](10000103.md), like I rehearsed it Today with [My-Next-Good-Man](150000008.md), this can happen faster than expected:
 
 ![123-Friends!](400000142.jpg)
 
