Make it nice, real and fair

--- a/21.md
+++ b/21.md
@@ -88,7 +88,7 @@ I meet the old [Roland](150000008.md) at the [Bäckerei-Mayer](2010034.md) and u
 
 In the Following we discuss many [Concepts](600011.md) of [Parallism](10000103.md) for [Computers](9000153.md) and because my [Colleague](180000010.md) is experienced in [Hardware](9400000.md), he of course understands the Principles of Computer-Architectures, but he also seems to be familiar with the [Concepts](600011.md) of [Operating-Systems](9100000.md).
 
-After about 30 Minutes Talk, I am almost sure to the have found One out of 10.000, who could claim to have "understood" most of this crazy [Technology](60044.md) - Maybe still [Light-Years](10000106.md) away from my [Niveau](404.md), but still a *really* good [Man](40080022.md)?
+After about 30 Minutes Talk, I am almost sure to the have found One out of 10.000, who could claim to have "understood" most of this crazy [Technology](60044.md) - Perhaps not quite at my Level yet, but nevertheless a *really* good [Man](40080022.md)!
 
 ### Footnotes
 
