--- a/21.md
+++ b/21.md
@@ -71,22 +71,22 @@
 
 After I finished my [Work](60036.md) for [My-Angry-House-Dragon](1971091142.md), I really need some Rest and therefore visit [Mandy](151000001.md) again. Though she also is quite strict with me, nevertheless the Time with her is much more in [Harmony](60100.md).
 
-Ok, we don't know each other for such a long Time, but somehow we understand each other and have similar [Views](600028.md) on the [Life](60064.md), for Example we both hate [Arrogance](41010006.md) the most.
+Ok, we don't know each other for such a long Time, but somehow it feels good and we have similar [Views](600028.md) on the [Life](60064.md), for Example we both hate [Arrogance](41010006.md) the most.
 
-To be fair, I also occasionally use this [Concept](600011.md) as a [Tool](600043.md) for [The-Humor](40201004.md) or as [Weapon](1200000003.md) for [The-Good](60120.md) or both [[0]](#12350).
+To be fair, I also occasionally use this [Concept](600011.md) as a [Tool](600043.md) for [Humor](40201004.md) or as [Weapon](1200000003.md) for [The-Good](60120.md) or both [[0]](#12350).
 
-And appropos [The-Good](60120.md): Today I committed to my new [Secrets-Repository](300000032.md) two [Lists](60008.md) with [Names](60048.md) of 10 Good-[Men](40080022.md) and 10 Good-[Women](40000010.md).
+And appropos [Good](60120.md): Today I committed to my new [Secrets-Repository](300000032.md) two [Lists](60008.md) with [Names](60048.md) of 10 Good-[Men](40080022.md) and 10 Good-[Women](40000010.md).
 
-Most of them are old [Friends](180000002.md) of mine, but also *really?* new Ones made it into my personal Top-10. Hopefully the List will grow soon and if we use *real* [Parallelism](10000103.md), like I rehearsed it Today with [My-Next-Good-Man](150000008.md), this can happen faster than expected:
+Most of them are old [Friends](180000002.md) of mine, but also *really?* new Ones made it into my personal Top-10. Hopefully the List will grow soon and if we use *real* [Parallelism](10000103.md), like I rehearsed it Today with [My-Next-Good-Man](150000008.md), this can happen faster than you might expect:
 
 ![123-Friends!](400000142.jpg)
 
 #### Blog-Chain-Time 2023.10.20-14:30 at the Café-Bäcker-Mayer <a id="12301"/>
 ###### Topics: Men, Technology
 
-I meet the old [Roland](150000008.md) at the [Bäckerei-Mayer](2010034.md) and use the [Opportunity](60164.md) to smoke a [Cigarillo](100100007.md) with him. My [Colleague](180000010.md) is an [Expert](12000000.md) for [Electronics](10400000.md), but also knows a lot about general [Computer-Science](9000000.md).
+I meet the depressive [Roland](150000008.md) at the [Bäckerei-Mayer](2010034.md) and use the [Opportunity](60164.md) to smoke a [Cigarillo](100100007.md) with him. My [Colleague](180000010.md) is an [Expert](12000000.md) for [Electronics](10400000.md), but also knows a Lot about [Computer-Science](9000000.md).
 
-In the Following we discuss many [Concepts](600011.md) of [Parallism](10000103.md) for [Computers](9000153.md) and because my [Colleague](180000010.md) is experienced in [Hardware](9400000.md), he of course understands the Principles of Computer-Architectures, but he also seems to be familiar with the [Concepts](600011.md) of [Operating-Systems](9100000.md).
+In the Following we discuss many [Concepts](600011.md) of [Parallism](10000103.md) in [Computer-Systems](9000153.md) and because my [Colleague](180000010.md) is especially experienced in [Hardware](9400000.md), he of course understands the Principles of Computer-Architectures, but he also seems to be quite familiar with the [Concepts](600011.md) of [Operating-Systems](9100000.md) and [Applications](9000055.md).
 
 After about 30 Minutes Talk, I am almost sure to the have found One out of 10.000, who could claim to have "understood" most of this crazy [Technology](60044.md) - Perhaps not quite at my Level yet, but nevertheless a *really* good [Man](40080022.md)!
 
