--- a/21.md
+++ b/21.md
@@ -71,9 +71,9 @@
 
 After I finished my [Work](60036.md) for [My-Angry-House-Dragon](1971091142.md), I really need some Rest and therefore visit [Mandy](151000001.md) again. Though she also is quite strict with me, nevertheless the Time with her is much more in [Harmony](60100.md).
 
-Ok, we don't know each other for such a long Time, but somehow it feels good and we have similar [Views](600028.md) on the [Life](60064.md), for Example we both hate [Arrogance](41010006.md) the most.
+Ok, we don't know each other for such a long Time, but somehow it feels good and we have similar [Views](600028.md) on the [Life](60064.md), for Example we hate [Arrogance](41010006.md) the most.
 
-To be fair, I also occasionally use this [Concept](600011.md) as a [Tool](600043.md) for [Humor](40201004.md) or as [Weapon](1200000003.md) for [The-Good](60120.md) or both [[0]](#12350).
+To be fair, I also occasionally use this [Concept](600011.md) as a [Tool](600043.md) for [Humor](40201004.md) or as [Weapon](1200000003.md) for [The-Good](60120.md) or both [[0]](#12350) of it.
 
 And appropos [Good](60120.md): Today I committed to my new [Secrets-Repository](300000032.md) two [Lists](60008.md) with [Names](60048.md) of 10 Good-[Men](40080022.md) and 10 Good-[Women](40000010.md).
 
