--- a/21.md
+++ b/21.md
@@ -92,7 +92,7 @@ After about 30 Minutes Talk, I am almost sure to the have found One out of 10.00
 
 ### Footnotes
 
-[<a id="12350"/>0] [https://holzheu.de](https://www.holzheu.de/podcast/bis-zum-naechsten-mal)
+[<a id="12350"/>0] Bis zum nächsten Mal: [https://holzheu.de](https://www.holzheu.de/podcast/bis-zum-naechsten-mal)
 
 ## Day-111: Dussel in Dusslingen <a id="12000"/>
 
