--- a/21.md
+++ b/21.md
@@ -174,7 +174,9 @@ So Better spend the [Money](6666.md) for Something that is real [Fun](60037.md),
 #### Blog-Chain-Time 2023.09.28-14:08 in Tübingen <a id="11001"/>
 ###### Topics: Friends, Tennis
 
-After a productive Tennis-Training and a good Meal, I forget my [Tennis-Backpack](270200011.md) at the Bus-Station. Minutes later I realize my Mistake and a one Hour Search in the Vain follows. Finally I surrender and drive back frustrated to [our](1971091101.md) House, where my Neighbours and I witness a real Miracle that was created by [my](1971091156.md) good old Terminator-Buddy [[2]](#10752) and Top-Gun-Friend [[3]](#10753):
+After a productive Tennis-Training and a good Meal, I forget my [Tennis-Backpack](270200011.md) at the Bus-Station. Minutes later I realize my Mistake and a one Hour Search in the Vain follows.
+
+Finally I surrender and drive back frustrated to [our](1971091101.md) House, where my Neighbours and I witness a real Miracle that was created by [my](1971091156.md) good old Terminator-Buddy [[2]](#10752) and Top-Gun-Friend [[3]](#10753):
 
 ![Thanks Giovanni!](400000090.jpg)
 
