Use better Word

--- a/21.md
+++ b/21.md
@@ -113,7 +113,7 @@ First we drive to the Practice-Area near the beautiful [Recycling-Center](110300
 
 Oh Boy, it's high Time to grow up, really! But back to me: To make it not too obvious for my old Hares, I regularily switch between Wild-Boar- and Pussy-Style, so maximum Accellerations are followed by really slow and broad [U-Turns](1100000009.md).
 
-Then I have to do the Excercises, of which the most dangerous One is called by our [Brave-Viking](150000005.md) just My-[Kyrptonite](750001.md). It looks like the two Traffic-Experts now somehow smelled the Rat and therefore try to test me more accurately.
+Then I have to do the Excercises, of which the most dangerous One is called by our [Brave-Viking](150000005.md) simply My-[Kyrptonite](750001.md). It looks like the two Traffic-Experts now somehow smelled the Rat and therefore try to test me more accurately.
 
 In the Following they invite me to do the Kyptonite-Test on the Side with the high [Curbs](1100000013.md), this means Kryptonite to the second Power. Of course I stick to my Plan and manage the Test as concise as possible.
 
