--- a/21.md
+++ b/21.md
@@ -113,9 +113,9 @@ First we drive to the Practice-Area near the beautiful [Recycling-Center](110300
 
 Oh Boy, it's high Time to grow up, really! But back to me: To make it not too obvious for my old Hares, I regularily switch between Wild-Boar- and Pussy-Style, so maximum Accellerations are followed by really slow and broad [U-Turns](1100000009.md).
 
-Then I have to do the Excercises, of which the most dangerous One is called by our [Brave-Viking](150000005.md) simply My-[Kyrptonite](750001.md). It looks like the two Traffic-Experts now somehow smelled the Rat and therefore try to test me more accurately.
+Then I have to do the Excercises, of which the most dangerous One is called by our [Brave-Viking](150000005.md) simply My-[Kyrptonite](750001.md). Suddenly it looks like the two Traffic-Experts now somehow smelled the Rat and therefore try to test me more accurately.
 
-In the Following they invite me to do the Kyptonite-Test on the Side with the high [Curbs](1100000013.md), this means Kryptonite to the second Power. Of course I stick to my Plan and manage the Test as concise as possible.
+I recognize that, because in the Following they invite me to do the Kyptonite-Test on the Side with the high [Curbs](1100000013.md), which means Kryptonite to the second Power. But of course I am not intimidated by such apathetic Attempts and sticking to my Plan, I also manage this Test as concise as possible.
 
 To entertain my [Audience](600146.md) a little bit more, on the subsequent Ride to Dußlingen-City I report wordy via [Radio](16000003.md) about my [Plans](600045.md) with the new Bike [[1]](#12051).
 
