--- a/21.md
+++ b/21.md
@@ -127,7 +127,7 @@ Come on Boy, your [Brain](40000026.md) isn't disabled, high Time to get more fuc
 
 > The Devil is known to be a Squirrel [[2]](#12052).
 
-That might be true, but my personal [Suspicion](670033.md) since several Weeks is an alternative Truth:
+That might be true, but my personal [Suspicion](670033.md) since several Weeks is an alternative [Truth](600021.md):
 
 > God is an Ass-Hole [[3]](#12053).
 
