--- a/810005.md
+++ b/810005.md
@@ -1,3 +1,3 @@
-# Metamizol-Natrium
+# Throat-Lozenge
 
-Metamizol-Natrium is an [Analgesic](810003.md).
+Throat-Lozenge is a [Medical-Drug](800007.md).
