--- a/21.md
+++ b/21.md
@@ -2,6 +2,7 @@
 
 ## Table of Contents  <a id="1"/>
 
+ - [Day-114](#14000) Harry S
  - [Day-113](#12300) Good Men and Women
  - [Day-111](#12000) Dussel in Dusslingen
  - [Day-110](#11000) Good old Buddies
@@ -63,6 +64,15 @@
  - [Day-12](#1200) Two Universes
  - [Day-11](#1100) Romania, Pacistan & Clash of Clans
  - [Day-10](#1000) Beauty
+
+## Day-114: XXX <a id="14000"/>
+
+#### Blog-Chain-Time 2023.10.21-9:15  <a id="14002"/>
+###### Topics: Choir
+
+This Week-End I am on [our](2010024.md) yearly Choir-Weekend in [Sankt-Luzen](2010036.md), where we train for the last [Concert](60010005.md) with our current [Musical-Lead](2010024.md):
+
+![Last Concert!](400000143.jpg)
 
 ## Day-113: Good Men and Women <a id="12300"/>
 
