--- a/21.md
+++ b/21.md
@@ -2,7 +2,7 @@
 
 ## Table of Contents  <a id="1"/>
 
- - [Day-114](#14000) Harry S
+ - [Day-114](#14000) Great Work, Anne!
  - [Day-113](#12300) Good Men and Women
  - [Day-111](#12000) Dussel in Dusslingen
  - [Day-110](#11000) Good old Buddies
@@ -65,14 +65,36 @@
  - [Day-11](#1100) Romania, Pacistan & Clash of Clans
  - [Day-10](#1000) Beauty
 
-## Day-114: XXX <a id="14000"/>
+## Day-114: Great Work, Anne! <a id="14000"/>
 
 #### Blog-Chain-Time 2023.10.21-9:15  <a id="14002"/>
-###### Topics: Choir
+###### Topics: Choir, Women
 
-This Week-End I am on [our](2010024.md) yearly Choir-Weekend in [Sankt-Luzen](2010036.md), where we train for the last [Concert](60010005.md) with our current [Musical-Lead](2010024.md):
+This Week-End we have our yearly Meeting of the [Ernst-Bloch-Choir](2010013.md), where we train for the very last [Concert](60010005.md) with the [current](2010024.md) Musical-Lead in [Sankt-Luzen](2010036.md):
 
-![Last Concert!](400000143.jpg)
+![Magic House!](400000148.jpg)
+
+Though out my Conviction that big is not always better, fortunately my [Machine](20000004.md) is still long enough to supply three Colleagues together with their Luggage:
+
+![Big Thing!](400000146.jpg)
+
+Because we want to give our very Last for the Farewell-[Show](60010003.md), the (especially high:) [Voices](60096.md) are brought up to the [Limit](600026.md), and therefore this Time we really have to use some Aids:
+
+![Voice Doping!](400000145.jpg)
+
+My first Program with the [Ernst-Bloch-Choir](2010013.md) was called [Heimat](2010025.md), which is a relevant Topic [[0]](#14050) for me, because sometimes I feel like an old [Tree](260030006.md) without [Roots](60110.md):
+
+![Uprooted Thing!](400000144.jpg)
+
+In our [Heimat-Program](2010025.md) especially the beatiful [Harmonies](60100.md) make me happy, whereas in our new [Noch-und-Noch-Nicht-Fertig-Werden](2010035.md), especially the high [Complexity](600023.md) of [Rhythm](60099.md) and [Accords](60100.md) leads to many unexpected, yet beloved [Surprises](60166.md) for my little [Human-Ears](40101033.md).
+
+And apropos Surprises: On the Week-End I learnt, that the [Creator](600098.md) of this brilliant [Work](700007.md) is also a very talented Voice-Immitator, so with all [Respect](41000005.md) I would call her now [Our-Composer-Witch](2010024.md):
+
+![Great Work, Anne!](400000143.jpg)
+
+### Footnotes
+
+[<a id="14050"/>0] Projekt Heimat: [https://holzheu.de](https://www.holzheu.de/projekt-heimat-mir-im-sueden)
 
 ## Day-113: Good Men and Women <a id="12300"/>
 
