Make it moderate

--- a/21.md
+++ b/21.md
@@ -72,19 +72,19 @@
 
 This Week-End we have our yearly Meeting of the [Ernst-Bloch-Choir](2010013.md), where we train for the very last [Concert](60010005.md) with the [current](2010024.md) Musical-Lead in [Sankt-Luzen](2010036.md):
 
-![Magic House!](400000148.jpg)
+![Magic House](400000148.jpg)
 
 Though out my Conviction that big is not always better, fortunately my [Machine](20000004.md) is still long enough to supply three Colleagues together with their Luggage:
 
-![Big Thing!](400000146.jpg)
+![Big Thing](400000146.jpg)
 
 Because we want to give our very Last for the Farewell-[Show](60010003.md), the (especially high:) [Voices](60096.md) are brought up to the [Limit](600026.md), and therefore this Time we really have to use some Aids:
 
-![Voice Doping!](400000145.jpg)
+![Voice Doping](400000145.jpg)
 
 My first Program with the [Ernst-Bloch-Choir](2010013.md) was called [Heimat](2010025.md), which is a relevant Topic [[0]](#14050) for me, because sometimes I feel like an old [Tree](260030006.md) without [Roots](60110.md):
 
-![Uprooted Thing!](400000144.jpg)
+![Uprooted Thing](400000144.jpg)
 
 In our [Heimat-Program](2010025.md) especially the beatiful [Harmonies](60100.md) make me happy, whereas in our new [Noch-und-Noch-Nicht-Fertig-Werden](2010035.md), especially the high [Complexity](600023.md) of [Rhythm](60099.md) and [Accords](60100.md) leads to many unexpected, yet beloved [Surprises](60166.md) for my little [Human-Ears](40101033.md).
 
