--- a/21.md
+++ b/21.md
@@ -86,7 +86,7 @@ My first Program with the [Ernst-Bloch-Choir](2010013.md) was called [Heimat](20
 
 ![Uprooted Thing](400000144.jpg)
 
-In the old Program especially the beatiful [Harmonies](60100.md) made me happy, whereas in our new [Noch-und-Noch-Nicht-Fertig-Werden](2010035.md), especially the high [Complexity](600023.md) of [Rhythm](60099.md) and [Accord](60100.md) leads to many unexpected, yet beloved [Surprises](60166.md) for my little [Human-Ears](40101033.md).
+In the old Program especially the beatiful [Harmonies](60100.md) made me happy, whereas in our new [Noch-und-Noch-Nicht-Fertig-Werden](2010035.md), the challanging high [Complexity](600023.md) of [Rhythm](60099.md) and [Accord](60100.md) leads to many unexpected, yet beloved [Surprises](60166.md) for my little [Human-Ears](40101033.md).
 
 And apropos Surprises: On the Week-End I learnt, that the [Creator](600098.md) of this brilliant [Work](700007.md) is also a very talented Voice-Immitator, so with all [Respect](41000005.md) I would call her now [Our-Composer-Witch](2010024.md):
 
