--- a/2010036.md
+++ b/2010036.md
@@ -1,3 +1,7 @@
 # Bildungs-Haus-St-Luzen
 
 Bildungs-Haus-St-Luzen is a [House](60100002.md) in [Hechingen](404.md).
+
+## Photos
+
+![Peace in St. Luzen](400000150.jpg)
