--- a/1948102000.md
+++ b/1948102000.md
@@ -1,3 +1,3 @@
-# Our-Choir-Lead-Double
+# The-Choir-Lead-Double
 
-Our-Choir-Lead-Double is a [Human](40000001.md).
+The-Choir-Lead-Double is a [Human](40000001.md).
