--- a/21.md
+++ b/21.md
@@ -82,15 +82,21 @@ Because we want to give our very Last for the Farewell-[Show](60010003.md), the 
 
 ![Voice Doping](400000145.jpg)
 
-My first Program with the [Ernst-Bloch-Choir](2010013.md) was called [Heimat](2010025.md), which is a relevant Topic [[0]](#14050) for me, because sometimes I feel like an old [Tree](260030006.md) without [Roots](60110.md):
+My first Program with the [Ernst-Bloch-Choir](2010013.md) was called [Heimat](2010025.md), which is a relevant Topic [[0]](#14050) for myself, because sometimes I feel like an old [Tree](260030006.md) without [Roots](60110.md):
 
 ![Uprooted Thing](400000144.jpg)
 
-Though the Topic Sometimes made me a little bit sad, on the other Side the beatiful [Harmonies](60100.md) made me happy again. I had one little [Criticism](600174.md) of the Program, namely that the [Complexity](600023.md) of the [Message]() was not reduced enough to be easily understandable by "normal" [Humans](40000001.md) like me.
+Though on one Side the Topic made me a little bit sad, on the Other Side the *really* beatiful [Harmonies](60100.md) made my Life a little bit happier again. The only *real* [Criticism](600174.md) I had, was the [Complexity](600023.md) of the [Messages](600175.md), which were already difficult to understand for "normal" [People](40000001.md) and almost Mission-Impossible for a "confused" [Man](40080022.md) like myself.
 
-In the old Program especially the beatiful [Harmonies](60100.md) made me happy, whereas in our new [Noch-und-Noch-Nicht-Fertig-Werden](2010035.md), the challanging high [Complexity](600023.md) of [Rhythm](60099.md) and [Accord](60100.md) leads to many unexpected, yet beloved [Surprises](60166.md) for my little [Human-Ears](40101033.md).
+But at least from [Colleagues](180000010.md) I heard, that this should be much better this Time. Unfortunately (up to now) I did not listen (Shame on me) carefully enough to the explaining Inter-Texts, so for the Time being, I have to leave this [Question](600107.md) open:
 
-And apropos Surprises: On the Week-End I learnt, that the [Creator](600098.md) of this brilliant [Work](700007.md) is also a very talented Voice-Immitator, so with all [Respect](41000005.md) I would call her now [Our-Composer-Witch](2010024.md):
+![Simple Messages](400000149.jpg)
+
+Though on the one Hand Understanding gets easier for the [Audience](600146.md) now, on the other Hand [Singing](91001007.md) will get *really* hard for the [Bloch-Choir](2010013.md) and (with all Respect) would be "Mission-Impossible" even for the all but untalented [Church-Singers](91001009.md) of [My-Chor-Lead-Double](1948102000.md).
+
+That's because our [Noch-und-Noch-Nicht-Fertig-Werden](2010035.md) contains *really* high [Complexity](600023.md) in [Rhythm](60099.md) as well as in [Accord](60100.md). But I personally think it is worth the Effort, because that leads to many unexpected, yet beloved [Surprises](60166.md) for the interested [Human-Ear](40101033.md).
+
+And appropos Surprises: On the Week-End I learnt, that the [Creator](600098.md) of this brilliant [Work](700007.md) is also a very talented Voice-Immitator, so with all [Respect](41000005.md) I would call her now [Our-Composer-Witch](2010024.md):
 
 ![Great Work, Anne!](400000143.jpg)
 
