--- a/21.md
+++ b/21.md
@@ -94,7 +94,7 @@ But at least from [Colleagues](180000010.md) I heard, that this should be much b
 
 Though on the one Hand Understanding gets easier for the [Audience](600146.md) now, on the other Hand [Singing](91001007.md) will get *really* hard for the [Bloch-Choir](2010013.md) and (with all Respect) would be "Mission-Impossible" even for the all but untalented [Church-Singers](91001009.md) of [My-Chor-Lead-Double](1948102000.md).
 
-That's because our [Noch-und-Noch-Nicht-Fertig-Werden](2010035.md) contains *really* high [Complexity](600023.md) in [Rhythm](60099.md) as well as in [Accord](60100.md). I personally think it's *really* worth the Effort, because that leads to many unexpected, yet beloved [Surprises](60166.md) for the interested [Human-Ear](40101033.md).
+That's because our [Noch-und-Noch-Nicht-Fertig-Werden](2010035.md) contains *really* high [Complexities](600023.md) in [Rhythm](60099.md) as well as in [Accord](60100.md). I personally think it's *really* worth the Effort, because that leads to many unexpected, yet beloved [Surprises](60166.md) for the interested [Human-Ear](40101033.md).
 
 And appropos Surprises [[1]](#14051): On the Week-End I learnt, that the [Creator](600098.md) of this brilliant [Work](700007.md) is also a very talented Voice-Immitator, so with all [Respect](41000005.md) I would call her now [Our-Composer-Witch](2010024.md):
 
