Make it better (again)

--- a/21.md
+++ b/21.md
@@ -86,7 +86,7 @@ My first Program with the [Ernst-Bloch-Choir](2010013.md) was called [Heimat](20
 
 ![Uprooted Thing](400000144.jpg)
 
-Though on one Side the Topic made me a little bit sad, on the Other Side the *really* beatiful [Harmonies](60100.md) made my Life a little bit happier again. The only *real* [Criticism](600174.md) I had, was the [Complexity](600023.md) of the [Messages](600175.md), which were already difficult to understand for "normal" [People](40000001.md) and almost "Mission-Impossible" for a confused [Man](40080022.md) like myself.
+Though on one Side the Topic made me a little bit sad, on the Other Side the *really* beatiful [Harmonies](60100.md) made my Life a little bit happier again. The only *real* [Criticism](600174.md) I had, was the [Complexity](600023.md) of the [Messages](600175.md), which were already difficult to understand for "normal" [People](40000001.md) and almost "Mission-Impossible" for a "confused" [Man](40080022.md) like myself.
 
 But at least from [Colleagues](180000010.md) I heard, that this should be much better this Time. Unfortunately (up to now) I did not listen (Shame on me) carefully enough to the explaining Inter-Texts, so for the Time being, I have to leave this [Question](600107.md) open:
 
