--- a/21.md
+++ b/21.md
@@ -92,7 +92,9 @@ But at least from [Colleagues](180000010.md) I heard, that this should be much b
 
 ![Simple Messages](400000149.jpg)
 
-Though on the one Hand Understanding gets easier for the [Audience](600146.md) now, on the other Hand [Singing](91001007.md) will get *really* hard for the [Bloch-Choir](2010013.md) and (with all Respect) would be "Mission-Impossible" even for the all but untalented [Church-Singers](91001009.md) of [My-Chor-Lead-Double](1948102000.md).
+Though on the one Hand Understanding gets easier for the [Audience](600146.md) now, on the other Hand [Singing](91001007.md) will get *really* hard for the [Bloch-Choir](2010013.md) and (with all Respect) would be "Mission-Impossible" even for the all but untalented [Church-Singers](91001009.md) of [My-Chor-Lead-Double](1948102000.md):
+
+![Good Mama](400000151.jpg)
 
 That's because our [Noch-und-Noch-Nicht-Fertig-Werden](2010035.md) contains *really* high [Complexities](600023.md) in [Rhythm](60099.md) as well as in [Accord](60100.md). I personally think it's *really* worth the Effort, because that leads to many unexpected, yet beloved [Surprises](60166.md) for the interested [Human-Ear](40101033.md).
 
