--- a/21.md
+++ b/21.md
@@ -92,7 +92,7 @@ But at least from [Colleagues](180000010.md) I heard, that this should be much b
 
 ![Simple Messages](400000149.jpg)
 
-Though on the one Hand Understanding gets easier for the [Audience](600146.md) now, on the other Hand [Singing](91001007.md) will get *really* hard for the [Bloch-Choir](2010013.md) and (with all Respect) would be "Mission-Impossible" even for the all but untalented [Church-Singers](91001009.md) of [My-Chor-Lead-Double](1948102000.md):
+Though on the one Hand Understanding gets easier for the [Audience](600146.md) now, on the other Hand [Singing](91001007.md) will get *really* hard for the [Bloch-Choir](2010013.md) and (with all Respect) would be "Mission-Impossible" even for the all but bad [Church-Singers](91001009.md) of [My-Chor-Lead-Double](1948102000.md):
 
 ![My Good Mama](400000151.jpg)
 
