--- a/21.md
+++ b/21.md
@@ -90,7 +90,7 @@ Though on one Side the Topic makes me a little bit sad, on the Other Side the *r
 
 The only *real* [Criticism](600174.md) I had, was the [Complexity](600023.md) of the [Messages](600175.md), which were already difficult to understand for "normal" [People](40000001.md) and almost "Mission-Impossible" for a "confused" [Man](40080022.md) like myself.
 
-But at least from [Colleagues](180000010.md) I heard, that this should be much better this Time. Unfortunately (up to now) I did not listen (Shame on me) carefully enough to the explaining Inter-Texts, so for the Time being, I have to leave this [Question](600107.md) open:
+But at least from [Colleagues](180000010.md) I heard, that in this Respect the new Program will be easier to consume. Unfortunately (up to now) I did not listen (Shame on me) carefully enough to the explaining Inter-Texts, so for the Time being, I have to leave this [Question](600107.md) open:
 
 ![Simple Messages](400000149.jpg)
 
