--- a/21.md
+++ b/21.md
@@ -98,7 +98,7 @@ Though on the one Hand for the [Audience](600146.md) Understanding might get eas
 
 ![Good Mama](400000152.jpg)
 
-That's because our [Noch-und-Noch-Nicht-Fertig-Werden](2010035.md) contains *really* high [Complexities](600023.md) in [Rhythm](60099.md) as well as in [Accord](60100.md), but I personally think it's *really* worth the Effort, because that leads to many unexpected, yet beloved [Surprises](60166.md) for the interested [Human-Ear](40101033.md).
+Our [Noch-und-Noch-Nicht-Fertig-Werden](2010035.md) contains *really* high [Complexities](600023.md) in [Rhythm](60099.md) as well as in [Accord](60100.md), but I personally think it's *really* worth the Effort, because that leads to many unexpected, yet beloved [Surprises](60166.md) for the interested [Human-Ear](40101033.md).
 
 And appropos Surprises [[1]](#14051): On the Week-End I learnt, that the [Creator](600098.md) of this brilliant [Work](700007.md) is also a very talented Voice-Immitator, so with all [Respect](41000005.md) I would call her now [Our-Composer-Witch](2010024.md):
 
