--- a/21.md
+++ b/21.md
@@ -114,7 +114,7 @@ And appropos Surprises [[1]](#14051): On the Week-End I learnt, that the [Creato
 #### Blog-Chain-Time 2023.10.20-20:00 with Mandy <a id="12302"/>
 ###### Topics: Arrogance, Men, Women, 123-Friends
 
-After I finished my [Work](60036.md) for [My-Angry-House-Dragon](1971091142.md), I really need some Rest and therefore visit [Mandy](151000001.md) again. Though she also is quite strict with me, nevertheless the Time with her is much more in [Harmony](60100.md).
+After I finished the [Work](60036.md) for [My-Angry-House-Dragon](1971091142.md), I really need some Rest and therefore visit [Mandy](151000001.md) again. Though she also is quite strict with me, nevertheless the Time with her is much more in [Harmony](60100.md).
 
 Ok, we don't know each other for such a long Time, but somehow it feels good and we have similar [Views](600028.md) on the [Life](60064.md), for Example we hate [Arrogance](41010006.md) the most.
 
