--- a/21.md
+++ b/21.md
@@ -118,7 +118,7 @@ After I finished the [Work](60036.md) for [My-Angry-House-Dragon](1971091142.md)
 
 Ok, we don't know each other for such a long Time, but somehow it feels good and we have similar [Views](600028.md) on the [Life](60064.md), for Example we hate [Arrogance](41010006.md) the most.
 
-To be fair, I also occasionally use this [Concept](600011.md) as a [Tool](600043.md) for [Humor](40201004.md) or as [Weapon](1200000003.md) for [The-Good](60120.md) or both [[0]](#12350) of it.
+To be fair, I occasionally also use this [Concept](600011.md) as a [Tool](600043.md) for [Humor](40201004.md) or as [Weapon](1200000003.md) for [The-Good](60120.md) or both [[0]](#12350) of it.
 
 And appropos [Good](60120.md): Today I committed to my new [Secrets-Repository](300000032.md) two [Lists](60008.md) with [Names](60048.md) of 10 Good-[Men](40080022.md) and 10 Good-[Women](40000010.md).
 
