--- a/21.md
+++ b/21.md
@@ -2,6 +2,7 @@
 
 ## Table of Contents  <a id="1"/>
 
+ - [Day-115](#15000) Men-Women-Universe
  - [Day-114](#14000) Great Work, Anne!
  - [Day-113](#12300) Good Men and Women
  - [Day-111](#12000) Dussel in Dusslingen
@@ -64,6 +65,41 @@
  - [Day-12](#1200) Two Universes
  - [Day-11](#1100) Romania, Pacistan & Clash of Clans
  - [Day-10](#1000) Beauty
+
+## Day-115: Men-Women-Universe <a id="15000"/>
+
+#### Blog-Chain-Time 2023.10.26-17:15 in Tübingen  <a id="15001"/>
+###### Topics: Men, Women
+
+Yesterday I had an [Argument](600151.md) about [Justice](600052.md) with my [My-Fellow-Occupant](88.md), where she made the [Claim](600078.md) that [Men](40080022.md) have much more [Contacts](10000039.md) with [Women](40000010.md) than the other Way round.
+
+I respond, that this cannot be [The-Truth](600140.md), because for each [Contact](40000015.md) we normally have exactly one [Woman](40000010.md) and one [Man](40080022.md), so in total each [Group](180000000.md) must have the same [Number](60000.md) of [Contacts](40000015.md).
+
+She pretends to me to not have understood my [Argumentation](600176.md), which of course cannot be [The-Truth](600140.md), because I know that she is not bad at all in [Mathematics](13000000.md).
+
+After a Walk in [Harmony](60100.md) with [Soey](142000001.md), the next Day I meet [Sarah](151000002.md) together with her [Father](40000007.md) and try to explain them as well, that [Men](40080022.md) do *not* have more [Fun](60170.md) than [Women](40000010.md).
+
+So let's assume we have a tiny [Universe](10000027.md) with only two Men **M1/M2** and two Women **W1/W2**, where **M1** has two Contacts with each of **W1/W2**, whereas **M2** has Zero-Contacts, then we can calculate the [Average-Ratio](12000060.md) **Women_per_Men** as Follows:
+
+$$ \mathrm{Women\_for\_M1} = 2 $$
+$$ \mathrm{Women\_for\_M2} = 0 $$
+$$ \mathrm{Number\_of\_Contacts} = 2 $$
+
+$$ \mathrm{Women\_per\_Men} = \frac{\mathrm{Women\_for\_M1} + \mathrm{Women\_for\_M2}}{\mathrm{Number\_of\_Contacts}} $$
+$$ = \frac{2 + 0}{2} = \frac{2}{2} = 1 $$
+
+So on Average each Man has one female Contact - But now let's see, if Women *really* have an Advantage here:
+
+$$ \mathrm{Men\_for\_W1} = 1 $$
+$$ \mathrm{Men\_for\_W2} = 1 $$
+$$ \mathrm{Number\_of\_Contacts} = 2 $$
+
+$$ \mathrm{Men\_per\_Women} = \frac{\mathrm{Men\_for\_W1} + \mathrm{Men\_for\_W2}}{\mathrm{Number\_of\_Contacts}} $$
+$$ = \frac{1 + 1}{2} = \frac{2}{2} = 1 $$
+
+Tada, $\mathrm{Women\_per\_Men} = \mathrm{Men\_per\_Women}$ and I was right again! But I must also admit, that though in [Theory](7000001.md) this looks like mathematic [Correctness](600077.md), nevertheless in [Reality](40000.md) the unbalanced Distribution could lead to [Loneliness](14000003.md) for **M2** and (maybe too much) hard [Work](60036.md) for **M1**:
+
+![Unbalanced Universe](400000153.png)
 
 ## Day-114: Great Work, Anne! <a id="14000"/>
 
