--- a/21.md
+++ b/21.md
@@ -103,7 +103,7 @@ Tada, $\mathrm{Women\_per\_Men} = \mathrm{Men\_per\_Women}$ and I was right agai
 
 ## Day-114: Great Work, Anne! <a id="14000"/>
 
-#### Blog-Chain-Time 2023.10.21-9:15  <a id="14002"/>
+#### Blog-Chain-Time 2023.10.21-9:15 in Sankt-Luzen <a id="14002"/>
 ###### Topics: Choir, Women
 
 This Week-End we have our yearly Meeting of the [Ernst-Bloch-Choir](2010013.md), where we train for the very last [Concert](60010005.md) with the [current](2010024.md) Musical-Lead in [Sankt-Luzen](2010036.md):
