--- a/21.md
+++ b/21.md
@@ -75,7 +75,7 @@ Yesterday I had an [Argument](600151.md) about [Justice](600052.md) with my [My-
 
 I respond, that this cannot be [The-Truth](600140.md), because for each [Contact](40000015.md) we normally have exactly one [Woman](40000010.md) and one [Man](40080022.md), so in total each [Group](180000000.md) must have the same [Number](60000.md) of [Contacts](40000015.md).
 
-She pretends to me to not have understood my [Argumentation](600176.md), which of course cannot be [The-Truth](600140.md), because I know that she is not bad at all in [Mathematics](13000000.md).
+She pretends to me to not have understood my [Argumentation](600176.md), which of course cannot be [The-Truth](600140.md), because she is not bad at all in [Mathematics](13000000.md).
 
 After a Walk in [Harmony](60100.md) with [Soey](142000001.md), the next Day I meet [Sarah](151000002.md) together with her [Father](40000007.md) and try to explain them as well, that [Men](40080022.md) do *not* have more [Fun](60170.md) than [Women](40000010.md).
 
