--- a/21.md
+++ b/21.md
@@ -97,7 +97,7 @@ $$ \mathrm{Number\_of\_Contacts} = 2 $$
 $$ \mathrm{Men\_per\_Women} = \frac{\mathrm{Men\_for\_W1} + \mathrm{Men\_for\_W2}}{\mathrm{Number\_of\_Contacts}} $$
 $$ = \frac{1 + 1}{2} = \frac{2}{2} = 1 $$
 
-Tada, $\mathrm{Women\_per\_Men} = \mathrm{Men\_per\_Women}$ and I was right again! But I must also admit, that though in [Theory](7000001.md) this looks like mathematic [Correctness](600077.md), nevertheless in [Reality](40000.md) the unbalanced Distribution could lead to [Loneliness](14000003.md) for **M2** and (maybe too much) hard [Work](60036.md) for **M1**:
+Tada, $\mathrm{Women\_per\_Men} = \mathrm{Men\_per\_Women}$ and who was right again? But I have to admit, that though in [Theory](7000001.md) this looks like mathematic [Correctness](600077.md), nevertheless in [Reality](40000.md) the unbalanced Distribution could lead to [Loneliness](14000003.md) for **M2** and (maybe too much) hard [Work](60036.md) for **M1**:
 
 ![Unbalanced Universe](400000153.png)
 
