--- a/21.md
+++ b/21.md
@@ -75,11 +75,13 @@ Yesterday I had an [Argument](600151.md) about [Justice](600052.md) with my [My-
 
 I respond, that this cannot be [The-Truth](600140.md), because for each [Contact](40000015.md) we normally have exactly one [Woman](40000010.md) and one [Man](40080022.md), so in total each [Group](180000000.md) must have the same [Number](60000.md) of [Contacts](40000015.md).
 
-She pretends to me to not have understood my [Argumentation](600176.md), which of course cannot be [The-Truth](600140.md), because she is not bad at all in [Mathematics](13000000.md).
+She pretends to me to not have understood my [Argumentation](600176.md), which of course cannot be [The-Truth](600140.md), because she is not bad at all in [Mathematics](13000000.md) and of course knows the following [Formula](13000025.md):
 
-After a Walk in [Harmony](60100.md) with [Soey](142000001.md), the next Day I meet [Sarah](151000002.md) together with her [Father](40000007.md) and try to explain them as well, that [Men](40080022.md) do *not* have more [Fun](60170.md) than [Women](40000010.md).
+$$ Average(x_1,x_2 ..\:x_n) = \frac{\sum\limits_{i=1}^{n}{x_i}}{n} = \frac{x_1 + x_2 + .. + x_n}{n} $$
 
-So let's assume we have a tiny [Universe](10000027.md) with only two Men **M1/M2** and two Women **W1/W2**, where **M1** has two Contacts with each of **W1/W2**, whereas **M2** has Zero-Contacts, then we can calculate the [Average-Ratio](12000060.md) **Women_per_Men** as Follows:
+After a Walk in [Harmony](60100.md) with [Soey](142000001.md), the next Day I meet [Sarah](151000002.md) together with her [Father](40000007.md), who seem to me not so experienced in [Theory](7000001.md) and therefore I try to explain also them as simple as possible, why [Men](40080022.md) *really* do *not* have more [Fun](60170.md) than [Women](40000010.md).
+
+So let's assume we have a [Micro-Universe](10000027.md) with only two Men **M1/M2** and two Women **W1/W2**, where **M1** has two Contacts with each of **W1/W2**, whereas **M2** has Zero-Contacts, then we can calculate the [Average-Ratio](12000060.md) **Women_per_Men** as Follows:
 
 $$ \mathrm{Women\_for\_M1} = 2 $$
 $$ \mathrm{Women\_for\_M2} = 0 $$
